# pymcfs

./: .gitmodules  ABOUT.md  pyproject.toml
.windsurf/: last_test_output.txt
.windsurf/rules/: workspace.md
data/swc/: demo.swc
notebooks/: demo.ipynb
outputs/demo/: skeleton.swc
pymcfs/: __init__.py  laplacian.py  mcf.py  medial.py  mesh.py  skeleton.py
scripts/: demo_mcfs.py
tests/: test_laplacian.py  test_laplacian_secure.py  test_mcf.py  test_mcf_guidance.py  test_mesh_manager.py  test_skeleton.py  test_swc.py  test_thin_mesh.py
