[project]
name = "pymcfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "plotly>=6.3.0",
    "pymeshlab>=2025.7",
    "pytest>=8.4.2",
    "scipy>=1.16.1",
    "trimesh>=4.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
]
